--- a/index.html.html
+++ b/index.html.html
@@ -69,7 +69,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Vinícius com o auxílio do professor Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
